--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 12 Nov 2005
+  Last Modified: 19 Nov 2005
   Number: 2
-  Version: 10
+  Version: 11
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -259,12 +259,16 @@ would otherwise be misinterpreted:
 Within a declaration, the C<&> sigil also declares the visibility of the
 subroutine name without the sigil within the scope of the declaration.
 
-Within a declaration, the C<^> sigil also declares the visibility of the
-type name without the sigil within the scope of the declaration.
-The first such declaration within a scope is assumed to be an unbound
-type, and takes the actual type of its associated argument.  With
-subsequent declarations the use of the sigil is optional, since the
-bare type name is also declared.
+Within a declaration, the C<^> sigil also declares the visibility of
+the type name without the sigil within the scope of the declaration.
+The first such declaration within a scope is assumed to be an
+unbound type, and takes the actual type of its associated argument.
+With subsequent declarations in the same scope the use of the sigil is
+optional, since the bare type name is also declared.  A declaration
+nested within must not use the sigil if it wishes to refer to the
+same type, since the inner declaration would rebind the type.  (Note
+that the signature of a pointy block counts as part of the inner block,
+not the outer block.)
 
 =item *
 
@@ -287,6 +291,7 @@ is subject to:
     $=foo	pod variable
     $<foo>	match variable, short for $/{'foo'}
     $!foo	explicitly private attribute (mapped to $foo though)
+    @;foo	multislice
 
 Most variables with twigils are implicitly declared or assumed to
 be declared in some other scope, and don't need a "my" or "our".
@@ -427,8 +432,24 @@ Each such slice is evaluated lazily.
 
 =item *
 
-Slicing hashes to return pairs rather than values should probably
-be done with an optional selection argument to C<.pairs()> or C<.kv()>.
+To make a slice subscript return something other than values, append an
+appropriate adverb to the subscript.
+
+    @array = <A B>;
+    @array[0,1,2];	# returns 'A', 'B', undef
+    @array[0,1,2]:p;	# returns a => 'A', b => 'B'
+    @array[0,1,2]:kv;	# returns 'a', 'A', 'b', 'B'
+    @array[0,1,2]:k;	# returns 'a', 'b'
+    @array[0,1,2]:v;	# returns 'A', 'B'
+
+    %hash = (:a<A>, :b<B>);
+    %hash<a b c>;	# returns 'A', 'B', undef
+    %hash<a b c>:p;	# returns a => 'A', b => 'B'
+    %hash<a b c>:kv;	# returns 'a', 'A', 'b', 'B'
+    %hash<a b c>:k;	# returns 'a', 'b'
+    %hash<a b c>:v;	# returns 'A', 'B'
+
+The adverbial forms all weed out non-existing entries.
 
 =item *
 
@@ -441,8 +462,9 @@ object to reset the iterator explicitly.)
 
 =item *
 
-Sorting a list of pairs should sort on their keys by default.  For
-more on C<sort> see S29.  (If there is no S29 yet, write one.)
+Sorting a list of pairs should sort on their keys by default, then
+on their values.  Sorting a list of lists should sort on the first
+elements, then the second elements, etc.  For more on C<sort> see S29.
 
 =item *
 
@@ -848,9 +870,11 @@ not radix switchers.
 
 =item *
 
-Characters indexed by hex, octal, and decimal can be interpolated into
-strings using either C<"\x123"> (with C<\o> and C<\d> behaving
-respectively) or using square brackets: C<"\x[123]">. 
+Characters indexed by hex, octal, and decimal can be interpolated
+into strings using either C<"\x123"> (with C<\o> and C<\d> behaving
+respectively) or using square brackets: C<"\x[123]">.  Multiple
+characters may be put into any of these by separating the numbers
+with comma: C<"\x[41,42,43]">.
 
 =item *
 
@@ -886,7 +910,7 @@ Generalized quotes may now take adverbs:
     :c		:closure	Interpolate {...} expressions
     :b		:backslash	Interpolate \n, \t, etc. (implies :m)
 
-Any of these may omit the colon after an initial "q", so we automatically
+Any of these may omit the colon after an initial "C<q>", so we automatically
 get the forms:
 
     Form	Same as
@@ -1271,7 +1295,7 @@ It depends on the state of their C<.bit> property.  Classes get to decide
 which of their values are true and which are false.  Individual objects
 can override the class definition:
 
-    return 0 but true;
+    return 0 but True;
 
 =back
 
