--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 2 Dec 2004
+  Last Modified: 19 Nov 2005
   Number: 11
-  Version: 4
+  Version: 5
 
 =head1 Overview
 
@@ -39,19 +39,32 @@ The first form is allowed only as the first statement in the file.
 
 Since there are no barewords in Perl 6, module names must be predeclared,
 or use the sigil-like C<::ModuleName> syntax.  The C<::> prefix does not
-imply top-levelness as it does in Perl 5.  (Use C<::*> for that.)
+imply top-levelness as it does in Perl 5.  (Use C<::*> or C<GLOBAL::> for that.)
 
-A bare C<module> declarator declares a global module name in C<::*>.
-To declare a module in the current package (or module, or class), use
-C<our module>.  To declare a lexically scoped module, use C<my module>.
+A bare C<module> declarator declares an C<our> module name in the current
+package.  At the start of the file, the current package is C<*>, so the
+first declaration in the file is automatically global.
+
+You can use C<our module> to explicitly
+declare a module in the current package (or module, or class).
+To declare a lexically scoped module, use C<my module>.
 Module names are always searched for from innermost scopes to outermost.
 As with an initial C<::>, the presence of a C<::> within the name
 does not imply globalness (unlike in Perl 5).
 
-The C<::*> namespace is not "main".  The default namespace for the main
-program is C<::*Main>.  (Putting C<module Main;> at the top of your program
-is redundant, except insofar as it tells Perl that the code is Perl 6 code
-and not Perl 5 code.  A bare C<module;> defaults to C<Main>.)
+The C<::*> namespace is not "main".  The default namespace for the
+main program is C<::*Main>, which it switches to from * as soon as
+it sees the first declaration, if that declaration doesn't set the
+package name.  (Putting C<module Main;> at the top of your program
+is redundant, except insofar as it tells Perl that the code is Perl
+6 code and not Perl 5 code.  But it's better to say "use v6" for that.)
+
+But note that if you say
+
+    use v6;
+    module Foo {...}
+
+you've just created Main::Foo, not *Foo.
 
 Module traits are set using C<is>:
 
@@ -149,6 +162,10 @@ operator in parens:
 Subversions are wildcarded, so C<1.2> really means C<1.2.0...>.  If you
 say:
 
+    use v6;
+
+which is short for:
+
     use Perl-6;
 
 you're asking for any version of Perl 6.  Say:
@@ -185,6 +202,13 @@ and it knows (even if you don't) that you mean
 
     my Dog-1.3.4-cpan:JRANDOM $spot .= new("woof");
 
+The use statement actually allows a language on the front of a module name,
+so that you can use modules from other languages.  The language is separated
+by a colon.  For instance:
+
+    use perl5:ACME::Bleach-1.0-DCONWAY;
+    use ruby:Rails <PR_MACHINE>;
+
 =head1 Forcing Perl 6
 
 To get Perl 6 parsing rather than the default Perl 5 parsing,
@@ -200,7 +224,7 @@ Actually, you can just start your main program with any of:
 
 Those all specify the latest Perl 6 semantics, and are equivalent to
 
-    use Perl-(v6.0.0...)-(Any);
+    use Perl-(v6.0...)-(Any);
 
 To lock the semantics to 6.0.0, say:
 
@@ -218,3 +242,4 @@ version number or other literal:
 it runs Perl 6 in "lax" mode, without strictures or warnings, since obvously
 a bare literal in a void context I<ought> to have produced a warning.
 (Invoking perl with C<-e6> has the same effect.)
+
