--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 19 Nov 2005
+  Last Modified: 21 Nov 2005
   Number: 12
-  Version: 5
+  Version: 6
 
 =head1 Overview
 
@@ -215,7 +215,7 @@ However, you can turn extend any of the legal forms above into a list
 operator by appending a colon:
 
     .doit: 1,2,3	# okay, three arguments
-    .doit(1): 2,3	# okay, no arguments plus list
+    .doit(1): 2,3	# okay, one argument plus list
     .doit (): 1,2,3	# ILLEGAL (two terms in a row)
     .doit.(1): 2,3	# okay, same as .doit(1,2,3)
     .doit .(1,2): 3	# okay, same as .doit(1,2,3)
@@ -245,6 +245,18 @@ or
     $obj.dothat.dothis: 1,2,3
 
 if you mean the other thing.
+
+Also note that if any term in a list is a bare closure or pointy
+sub, it will be considered to be the final argument of its list
+unless the closure's right curly is followed immediately by comma
+or comma surrogate.  In particular, a method call does *not* extend
+the list, so you can say:
+
+    @list.grep: { $_ % 2 }.map: { $_ - 1 }.say
+
+and that will be taken as equivalent to
+
+    @list.grep({ $_ % 2 }).map({ $_ - 1 }).say
 
 Methods (and subs) may be declared as lvalues with C<is rw>.  You can
 use an argumentless C<rw> method anywhere you can use a variable,
