--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -1284,11 +1284,11 @@ This behaviour is quite different to Perl 5 semantics:
 
       # Perl 5...
       #
-      # $0---------------------  $3---------  $4------------------
-      # |   $1---------------  | |          | | $5----  $6------  |
-      # |   |         $2--   | | |          | | |     | |       | |
+      # $1---------------------  $4---------  $5------------------
+      # |   $2---------------  | |          | | $6----  $7------  |
+      # |   |         $3--   | | |          | | |     | |       | |
       # |   |         |   |  | | |          | | |     | |       | |
-     m/ ( A (guy|gal|g(\S+)  ) ) (sees|calls) ( (the|a) (gal|guy) ) /;
+     m/ ( A (guy|gal|g(\S+)  ) ) (sees|calls) ( (the|a) (gal|guy) ) /x;
 
 =item *
 
